[tool.poetry]
name = "my-package"
version = "0.1.0"
description = "My package description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.0.0"
pybaseball = "^2.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 