[tool.poetry]
name = "baseball"
version = "0.1.0"
description = "Baseball Stats"
authors = ["Alex Kilbo <akilbo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.0.0"
pybaseball = "^2.2.6"
jupyter = "^1.0"
ipykernel = "^6.0"
plotly = "^5.3.1"
pandas = "^1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 